--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-mirage": "^0.4.0",
     "ember-cli-qunit": "^3.1.0",
     "ember-cli-sass": "^7.1.1",
     "ember-cli-shims": "^1.0.2",
@@ -40,6 +41,7 @@
     "ember-power-select": "^1.10.3",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.12.0",
+    "ember-test-selectors": "^0.3.8",
     "ember-welcome-page": "^2.0.2",
     "loader.js": "^4.2.3"
   },
