--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-one-way-controls": "^3.0.1",
     "ember-power-select": "^1.10.3",
     "ember-resolver": "^2.0.3",
+    "ember-route-action-helper": "^2.0.6",
     "ember-source": "~2.12.0",
     "ember-test-selectors": "^0.3.8",
     "ember-welcome-page": "^2.0.2",
